enableMajorityReadConcern option cannot be disabled if specified

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Repl 10 (02/19/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

          if (params.count("replication.enableMajorityReadConcern")) {
              replSettings.setMajorityReadConcernEnabled(true);
          }
      

      This code should be using the value of the parameter to call setMajorityReadConcernEnabled, not a hardcoded "true".
      Right now, if you specify {replication

      {enableMajorityReadConcern:false}

      } in a config file, it actually turns the option on.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: