SERVER-22683 support replication.enableMajorityReadConcern=false in configuration file