src/mongo/db/mongod_options.cpp
@@ -1180,7 +1180,8 @@ Status storeMongodOptions(const moe::Environment& params, const std::vector<std:
     }
 
     if (params.count("replication.enableMajorityReadConcern")) {
-        replSettings.setMajorityReadConcernEnabled(true);
+        replSettings.setMajorityReadConcernEnabled(
+            params["replication.enableMajorityReadConcern"].as<bool>());
     }
 
     if (params.count("storage.indexBuildRetry")) {
